manifests/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hdmi-switch
  namespace: hdmi-switch
spec:
  selector:
    app: hdmi-switch
  ports:
    - port: 8000
      targetPort: 8000
