manifests/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hdmi-switch
  namespace: hdmi-switch
spec:
  ingressClassName: traefik
  rules:
    - host: hdmi-switch.morrisons.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hdmi-switch
                port:
                  number: 8000
